# market-risk-model-validation-toolkit

./: .gitignore  AGENT_PROMPTS.md  PROJECT_SPEC.md  README.md  TASK_BOARD.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: data_pipeline.yaml  risk_engine.yaml  stress_engine.yaml  validation_engine.yaml
configs/portfolios/: custom_multi_asset.yaml  example_portfolio.yaml
configs/stress_scenarios/: example_scenarios.yaml
data/: README.md
notebooks/: README.md
reports/: README.md  sample_validation_report.md
reports/templates/: README.md
src/market_risk_toolkit/: __init__.py
src/market_risk_toolkit/data/: __init__.py  __main__.py  config.py  download.py  pipeline.py  validation.py
src/market_risk_toolkit/portfolio/: __init__.py  __main__.py  analytics.py  config.py  io.py  pipeline.py  plotting.py
src/market_risk_toolkit/risk/: __init__.py  __main__.py  config.py  io.py  metrics.py  pipeline.py  plotting.py
src/market_risk_toolkit/stress/: __init__.py  __main__.py  config.py  engine.py  io.py  pipeline.py  plotting.py
src/market_risk_toolkit/utils/: __init__.py
src/market_risk_toolkit/validation/: __init__.py  io.py  (+5 more)
tests/: conftest.py
tests/integration/: test_data_pipeline_artifacts.py  test_portfolio_pipeline_artifacts.py  test_risk_pipeline_artifacts.py  test_stress_pipeline_artifacts.py  test_validation_pipeline_artifacts.py
tests/unit/: test_config_loading.py  test_data_validation.py  test_package_import.py  test_portfolio_analytics.py  test_risk_metrics.py  test_stress_engine.py  test_validation_backtesting.py
